# ESP32-Washing-Machine

./: .gitignore  .gitmodules  LICENSE  NOTICE  README.md
brands/LG/hw/Program Dial/: Program_Dial_Backplate.stl
brands/LG/sw/LG_IOT_Washer_Firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.old
brands/LG/sw/LG_IOT_Washer_Firmware/main/: CMakeLists.txt  Kconfig  app_config.h  idf_component.yml  main.cpp  tasks.cpp  wash_plan.h  wash_types.h
brands/LG/sw/LG_IOT_Washer_Firmware/main/drivers/: led_ring.cpp  led_ring.h
brands/LG/sw/LG_IOT_Washer_Firmware/main/drivers/display/: display.cpp  display.h  fonts.h  qrcodegen.cpp
brands/LG/sw/LG_IOT_Washer_Firmware/main/drivers/freehome/: freehome_manager.cpp  freehome_manager.h
brands/LG/sw/LG_IOT_Washer_Firmware/main/drivers/gpio_hal/: gpio_hal.cpp  gpio_hal.h
brands/LG/sw/LG_IOT_Washer_Firmware/main/drivers/mpu6050/: mpu6050.cpp  mpu6050.h
brands/LG/sw/LG_IOT_Washer_Firmware/main/drivers/odrive/: odrive.cpp  odrive.h
brands/LG/sw/LG_IOT_Washer_Firmware/main/drivers/sound/: sound.cpp  sound.h
brands/LG/sw/LG_IOT_Washer_Firmware/main/drivers/wifi/: wifi_manager.cpp  wifi_manager.h  wifi_manager_integration.h
brands/LG/sw/LG_IOT_Washer_Firmware/main/machine_state/: constants.cpp  constants.h  machine_state.cpp  machine_state.h
brands/LG/sw/LG_IOT_Washer_Firmware/main/simulator/: simulator.cpp  simulator.h
brands/LG/sw/LG_IOT_Washer_Firmware/main/tasks/: tasks.cpp  tasks.h
brands/LG/sw/LG_IOT_Washer_Firmware/main/ui_controller/: ui_controller.cpp  ui_controller.h
brands/LG/sw/LG_IOT_Washer_Firmware/main/ulp/: buttons.S  power_btn.S  ulp_manager.cpp  ulp_manager.h
brands/LG/sw/LG_IOT_Washer_Firmware/main/wash_plan/: wash_plan.cpp
brands/LG/sw/OTA_WASHER/: FreeRTOS_tasks.h  HTML.h  OTA.h  OTA_WASHER.ino  Sound.h  constants.h  debug_comm.h  display.h  fonts.h  graphic_assets.h  output.JSON  stats.h  (+1 more)
(+8 files in other folders)
